fix: Compatibility of Language Server with Java8 (#1029)